--- a/CryptoPals.Runnables/CryptoPals.Runnables.csproj
+++ b/CryptoPals.Runnables/CryptoPals.Runnables.csproj
@@ -3,10 +3,15 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\CryptoPals\CryptoPals.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2020.3.0" />
     </ItemGroup>
 
 </Project>
